feat: Sistema completo actualizado con nuevas funcionalidades
- Portal de AutogestiÃ³n para Socios (mi-cuenta.html)
  * Login con DNI y nÃºmero de socio
  * Dashboard con deuda, Ãºltimo pago y prÃ³ximo vencimiento
  * Historial completo de movimientos (cupones, pagos, visitas)
  * Instrucciones de pago con CBU dinÃ¡mico
  * Ejemplos de login para testing

- ConfiguraciÃ³n del Sistema (configuracion.html)
  * InformaciÃ³n del Club
  * Datos Bancarios (CBU, Alias)
  * Costos y Tarifas (Visitas, Cuotas, Amarras)
  * ParÃ¡metros de FacturaciÃ³n
  * Persistencia en localStorage
  * IntegraciÃ³n dinÃ¡mica con otros mÃ³dulos

- Mejoras en ConciliaciÃ³n Bancaria
  * Matching bidireccional por CUIL calculado desde DNI
  * ExclusiÃ³n de movimientos negativos (egresos)
  * 5 niveles de matching con diferentes confianzas
  * DetecciÃ³n de pagos duplicados
  * Parser mejorado para extractos bancarios

- Mejoras en GestiÃ³n de Socios
  * Carga de visitas por socio desde acciones
  * Modal de detalle de cuenta con tabs
  * Historial de movimientos con filtros
  * IntegraciÃ³n con configuraciÃ³n para costo de visitas
  * 59 socios reales con datos de embarcaciones

- SimplificaciÃ³n de Dashboard
  * 3 mÃ©tricas principales
  * Acceso rÃ¡pido a Portal de Socios y ConfiguraciÃ³n
  * Removida secciÃ³n de actividad reciente

- SimplificaciÃ³n de FacturaciÃ³n
  * Acciones de cupones: solo Ver y Enviar por Email
  * Removida opciÃ³n de intereses por mora en generaciÃ³n

- EliminaciÃ³n de instrucciones-pago.html
  * Funcionalidad integrada en mi-cuenta.html

- DocumentaciÃ³n completa
  * FUNCIONALIDADES.md con explicaciÃ³n detallada
  * Historial de cambios documentado
  * Casos de uso y flujos de trabajo

- Mejoras de UX
  * Headers consistentes con links a ConfiguraciÃ³n
  * Scroll mejorado en pÃ¡ginas de configuraciÃ³n
  * DiseÃ±o responsive en todos los mÃ³dulos

--- a/dashboard.html
+++ b/dashboard.html
@@ -232,6 +232,9 @@
                 <i class="fas fa-anchor"></i> Club Náutico Embalse
             </div>
             <div class="user-info">
+                <a href="configuracion.html" style="color: white; text-decoration: none; margin-right: 1rem;">
+                    <i class="fas fa-cog"></i> Configuración
+                </a>
                 <a href="index.html" style="color: white; text-decoration: none; margin-right: 1rem;">
                     <i class="fas fa-home"></i> Inicio
                 </a>
@@ -304,74 +307,17 @@
                 <div class="stat-number">189</div>
                 <div class="stat-label">+3 nuevas registradas</div>
             </div>
-
-            <div class="card">
-                <div class="card-header">
-                    <div class="card-title">Pagos Pendientes</div>
-                    <i class="fas fa-exclamation-triangle card-icon"></i>
-                </div>
-                <div class="stat-number">23</div>
-                <div class="stat-label">Requieren atención</div>
-            </div>
         </div>
 
-        <!-- Gráficos y actividades recientes -->
-        <div style="display: grid; grid-template-columns: 2fr 1fr; gap: 2rem;">
-            <div class="card">
-                <div class="card-header">
-                    <div class="card-title">Ingresos por Mes</div>
-                    <button class="btn">Ver Detalles</button>
-                </div>
-                <div class="chart-container">
-                    <i class="fas fa-chart-line" style="font-size: 3rem; color: #3498db;"></i>
-                    <span style="margin-left: 1rem;">Gráfico de ingresos mensuales</span>
-                </div>
+        <!-- Gráfico de ingresos -->
+        <div class="card">
+            <div class="card-header">
+                <div class="card-title">Ingresos por Mes</div>
+                <button class="btn">Ver Detalles</button>
             </div>
-
-            <div class="recent-activities">
-                <div class="card-header">
-                    <div class="card-title">Actividad Reciente</div>
-                </div>
-                
-                <div class="activity-item">
-                    <div class="activity-icon payment">
-                        <i class="fas fa-credit-card"></i>
-                    </div>
-                    <div class="activity-content">
-                        <div class="activity-title">Pago recibido - Juan Pérez</div>
-                        <div class="activity-time">Hace 2 horas - $45,000</div>
-                    </div>
-                </div>
-
-                <div class="activity-item">
-                    <div class="activity-icon new-member">
-                        <i class="fas fa-user-plus"></i>
-                    </div>
-                    <div class="activity-content">
-                        <div class="activity-title">Nuevo socio registrado</div>
-                        <div class="activity-time">Hace 4 horas - María González</div>
-                    </div>
-                </div>
-
-                <div class="activity-item">
-                    <div class="activity-icon boat">
-                        <i class="fas fa-ship"></i>
-                    </div>
-                    <div class="activity-content">
-                        <div class="activity-title">Embarcación registrada</div>
-                        <div class="activity-time">Ayer - Velero "Aventura"</div>
-                    </div>
-                </div>
-
-                <div class="activity-item">
-                    <div class="activity-icon payment">
-                        <i class="fas fa-exclamation-circle"></i>
-                    </div>
-                    <div class="activity-content">
-                        <div class="activity-title">Cupón vencido</div>
-                        <div class="activity-time">Hace 1 día - Carlos López</div>
-                    </div>
-                </div>
+            <div class="chart-container">
+                <i class="fas fa-chart-line" style="font-size: 3rem; color: #3498db;"></i>
+                <span style="margin-left: 1rem;">Gráfico de ingresos mensuales</span>
             </div>
         </div>
 
@@ -386,8 +332,11 @@
             <a href="conciliacion.html" class="btn" style="margin-right: 1rem; text-decoration: none;">
                 <i class="fas fa-exchange-alt"></i> Conciliar Pagos
             </a>
-            <a href="instrucciones-pago.html" class="btn" style="background: #9b59b6; text-decoration: none;">
-                <i class="fas fa-credit-card"></i> Instrucciones Pago
+            <a href="mi-cuenta.html" class="btn" style="background: #16a085; margin-right: 1rem; text-decoration: none;">
+                <i class="fas fa-user-circle"></i> Portal de Socios
+            </a>
+            <a href="configuracion.html" class="btn" style="background: #9b59b6; text-decoration: none;">
+                <i class="fas fa-cog"></i> Configuración
             </a>
         </div>
     </div>
