--- a/embarcaciones.html
+++ b/embarcaciones.html
@@ -334,6 +334,9 @@
                 <a href="conciliacion.html" style="color: white; text-decoration: none;">
                     <i class="fas fa-exchange-alt"></i> Conciliación
                 </a>
+                <a href="configuracion.html" style="color: white; text-decoration: none;">
+                    <i class="fas fa-cog"></i> Configuración
+                </a>
             </div>
         </div>
     </div>
@@ -382,17 +385,6 @@
                         <option value="custom">Personalizado</option>
                     </select>
                 </div>
-            </div>
-            <div style="display: flex; gap: 1rem;">
-                <button class="btn">
-                    <i class="fas fa-search"></i> Buscar
-                </button>
-                <button class="btn" style="background: #6c757d;">
-                    <i class="fas fa-undo"></i> Limpiar
-                </button>
-                <button class="btn" style="background: #17a2b8;">
-                    <i class="fas fa-download"></i> Exportar
-                </button>
             </div>
         </div>
 
