refactor: actualizar funcionalidades en index.html
- Embarcaciones: removidas referencias a 'Control de motores' y 'Estados de mantenimiento'
- Embarcaciones: agregadas 'AsociaciÃ³n con socios' y 'BÃºsqueda y filtros avanzados'
- FacturaciÃ³n: removida 'MÃºltiples mÃ©todos de pago'
- FacturaciÃ³n: agregado 'EnvÃ­o por email' y 'EnvÃ­o automÃ¡tico por email'
- Mejora: descripciÃ³n mÃ¡s clara de funcionalidades implementadas

--- a/index.html
+++ b/index.html
@@ -304,12 +304,12 @@
                     <i class="fas fa-ship"></i>
                 </div>
                 <h3 class="mockup-title">Gestión de Embarcaciones</h3>
-                <p class="mockup-description">Registro detallado de embarcaciones con especificaciones técnicas, motores y documentación.</p>
+                <p class="mockup-description">Registro detallado de embarcaciones con especificaciones técnicas y documentación.</p>
                 <ul class="mockup-features">
                     <li>Registro de embarcaciones</li>
                     <li>Especificaciones técnicas</li>
-                    <li>Control de motores</li>
-                    <li>Estados de mantenimiento</li>
+                    <li>Asociación con socios</li>
+                    <li>Búsqueda y filtros avanzados</li>
                 </ul>
                 <div class="btn btn-info">
                     <i class="fas fa-eye"></i> Ver Embarcaciones
@@ -327,7 +327,7 @@
                     <li>Generación masiva de cupones mensuales</li>
                     <li>Vista previa antes de generar</li>
                     <li>Registro de pagos</li>
-                    <li>Múltiples métodos de pago</li>
+                    <li>Envío por email</li>
                     <li>Opciones avanzadas de generación</li>
                 </ul>
                 <div class="btn btn-warning">
@@ -411,7 +411,7 @@
                         <li style="padding: 0.5rem 0; color: #495057;">✓ Generación masiva de cupones mensuales</li>
                         <li style="padding: 0.5rem 0; color: #495057;">✓ Vista previa antes de generar</li>
                         <li style="padding: 0.5rem 0; color: #495057;">✓ Registro de pagos</li>
-                        <li style="padding: 0.5rem 0; color: #495057;">✓ Múltiples métodos de pago</li>
+                        <li style="padding: 0.5rem 0; color: #495057;">✓ Envío automático por email</li>
                         <li style="padding: 0.5rem 0; color: #495057;">✓ Dashboard con métricas clave</li>
                     </ul>
                 </div>
@@ -430,8 +430,8 @@
                     <ul style="list-style: none; padding: 0;">
                         <li style="padding: 0.5rem 0; color: #495057;">✓ Registro detallado de barcos</li>
                         <li style="padding: 0.5rem 0; color: #495057;">✓ Especificaciones técnicas</li>
-                        <li style="padding: 0.5rem 0; color: #495057;">✓ Control de motores</li>
-                        <li style="padding: 0.5rem 0; color: #495057;">✓ Estados de mantenimiento</li>
+                        <li style="padding: 0.5rem 0; color: #495057;">✓ Asociación con socios</li>
+                        <li style="padding: 0.5rem 0; color: #495057;">✓ Búsqueda y filtros avanzados</li>
                     </ul>
                 </div>
             </div>
